--- a/template/contact/view.html
+++ b/template/contact/view.html
@@ -6,23 +6,23 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
         <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+              integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <title>Formulário de contato</title>
     </head>
     <body>
         <div class='text-center'>
             <h1>{{ title }}</h1>
+
         </div>
-   <div class='container'>
+        <div class='container'>
             <div class='row'>
                 <div class='col'>
                     <p>{{ content }}</p>
                     <div class='col-sm-6 col-12'>
                     <form method='POST'> {% csrf_token %}
-                        <input type='text' class='form-control' name='fullname 'placeholder='Digite seu nome completo'>
-                        <input type='email' class='form-control' name='email' placeholder='Digite seu email'>
-                        <textarea name='content' class='form-control' placeholder='Digite seu texto aqui'></textarea>
+                        {{ form }}
+                        <br/>
                         <button type='submit' class='btn btn-default'>Enviar</button>
                     </form>
                     </div>
