--- a/template/index.html
+++ b/template/index.html
@@ -8,14 +8,13 @@
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-        <title>Código Fluente Ecommerce!</title>
+        <title>Formulário de Contato</title>
     </head>
     <body>
         <div class='text-center'>
             <h1>{{ title }}</h1>
-            <h2>{{ content }}</h2>
-            <h2>Tá funcionando perfeitamente!!!</h2>
         </div>
+
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
